--- a/_news/2020-06-24-news-sds2020.md
+++ b/_news/2020-06-24-news-sds2020.md
@@ -21,12 +21,11 @@ If you want to know the answer to the following questions, and have a basic know
 
 <ul>
 <ul>What problems does edge computing solve?</ul>
-<li>How can we take advantage of the edge computing?</li>
-<li>How does edge computing and cloud computing work together?</li>
-<li>How to balance the load between the edge and the cloud ?</li>
+<li>How can we take advantage of edge computing?</li>
+<li>How do edge computing and cloud computing work together?</li>
+<li>How can you balance the load between the edge and the cloud ?</li>
 <li>What are the current technologies for designing hybrid platforms (edge, cloud) for secure IoT  applications ?</li> 
 </ul>
-
 
 The workshop includes the hands-on demo of the above technologies and an open-source platform for intelligent IoT applications. 
 
