News item on ELASTIC meeting

--- a/_news/2020-06-24-news-sds2020.md
+++ b/_news/2020-06-24-news-sds2020.md
@@ -7,8 +7,8 @@ product: news
 product-name: News
 class: news
 category: media
-top-story: true
-in-focus: true
+top-story: false
+in-focus: false
 ---
 
 To take account of these special times, the [Swiss Conference on Data Science](https://sds2020.ch/) is playing safe and holding its event on line for the first time this year. The conference brings together data scientists, developers, opinion leaders and decision makers to share ideas on innovative products and services. 
