--- a/_news/2020-06-24-news-sds2020.md
+++ b/_news/2020-06-24-news-sds2020.md
@@ -37,5 +37,5 @@ The workshop includes the hands-on demo of the above technologies and an open-so
 
 Online! You can take part from the comfort and safety of your own office or home-working space.
 
-If that's not enough for you, the full Swiss Conference on Data Science programme is available [here](https://sds2020.ch/conference-program).
+If that's not enough for you, the full Swiss Conference on Data Science programme is available [here](https://sds.data-innovation.org).
   
